# esp32-pet-tamagotchi

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  build.ps1  flash.ps1  idf.py  monitor_read.py  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
docs/: APP_AUTHORING.md  GAMEPLAY.md  KOS.md  PINOUT.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
main/app/: ble_pet.cpp  ble_pet.h  pet_ai_usage.cpp  pet_ai_usage.h  pet_game_gacha.cpp  pet_game_gacha.h  pet_game_sequence.cpp  pet_game_sequence.h  pet_game_whack.cpp  pet_game_whack.h  pet_idle_events.cpp  pet_idle_events.h  pet_meta.cpp  pet_meta.h  pet_pages.cpp  pet_pages.h  pet_save.cpp  pet_save.h  pet_state.cpp  pet_state.h  pet_ui.cpp  pet_ui.h  screen_power.cpp  screen_power.h  ui_main_task.cpp  ui_main_task.h  wifi_manager.cpp  wifi_manager.h
main/app/util/: HttpClient.cpp  HttpClient.h  NvsHandle.h  NvsStorage.h  clock_util.cpp  clock_util.h
main/bsp/: bsp_config.h  bsp_i2c.cpp  bsp_i2c.h  bsp_key.cpp  bsp_key.h  bsp_lcd.cpp  bsp_lcd.h  bsp_pca9557.cpp  bsp_pca9557.h  bsp_qmi8658.cpp  bsp_qmi8658.h  bsp_touch.cpp  bsp_touch.h
main/kos/: kos.cpp  kos.h  kos_app.h  kos_app_gacha.cpp  kos_app_gacha.h  kos_app_pet.cpp  kos_app_pet.h  kos_app_registry.cpp  kos_app_registry.h  kos_app_settings.cpp  kos_app_settings.h  kos_display.cpp  kos_display.h  kos_input.cpp  kos_input.h  kos_launcher.cpp  kos_launcher.h
main/lvgl/: lvgl_init.cpp  lvgl_init.h
tools/: build_frames.py
