idf_component_register(SRCS "main.cpp"
                             "bsp/bsp_i2c.cpp"
                             "bsp/bsp_pca9557.cpp"
                             "bsp/bsp_lcd.cpp"
                             "bsp/bsp_touch.cpp"
                             "bsp/bsp_qmi8658.cpp"
                             "bsp/bsp_key.cpp"
                             "lvgl/lvgl_init.cpp"
                             "app/pet_state.cpp"
                             "app/pet_meta.cpp"
                             "app/pet_save.cpp"
                             "app/pet_pages.cpp"
                             "app/pet_game_whack.cpp"
                             "app/pet_game_sequence.cpp"
                             "app/pet_game_gacha.cpp"
                             "app/pet_idle_events.cpp"
                             "app/pet_ui.cpp"
                             "app/wifi_manager.cpp"
                             "app/ble_pet.cpp"
                             "app/pet_ai_usage.cpp"
                             "app/screen_power.cpp"
                             "app/util/HttpClient.cpp"
                             "app/util/clock_util.cpp"
                             "app/ui_main_task.cpp"
                    PRIV_REQUIRES driver esp_driver_gpio esp_driver_spi esp_driver_ledc esp_driver_i2c esp_lcd espressif__esp_lcd_touch espressif__esp_lvgl_port lvgl__lvgl heap esp_timer nvs_flash esp_wifi esp_event esp_netif bt espressif__cjson esp_http_client mbedtls
                    INCLUDE_DIRS ".")

target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-missing-field-initializers -Wno-deprecated-enum-enum-conversion)